@@ -4,6 +4,8 @@ Revision history for {{$dist->name}}
   - You can now pass an opaque in place of a closure type (pipcet++ gh#40,gh#41)
   - FFI closures are now cached and can be reused if the same closure is passed
     repeatedly (pipcet++ gh#40,gh#42)
+  - Passing non-reference to scalar as a pointer argument will now issue a warning
+    (gh#5)
 
 0.29      2015-02-24 08:50:34 -0500
   - Delayed loading of Win32::ErrorMode to avoid build prereq failure on Windows
